--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *.jar
 *.war
 *.ear
-/nbproject/*
+/nbproject/private/*
 /build/*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
